--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -10,12 +10,13 @@
     <TextView
         android:id="@+id/currentDate"
         android:layout_width="371dp"
-        android:layout_height="53dp"
+        android:layout_height="54dp"
         android:layout_gravity="center"
         android:layout_marginTop="36dp"
-        android:background="#BEBFBDBD"
+        android:background="@drawable/rounded_corner"
+        android:gravity="center_vertical"
         android:inputType="textAutoComplete"
-        android:text="Today's date is: "
+        android:text="    Today's date is: "
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,10 +29,11 @@
         android:layout_height="54dp"
         android:layout_gravity="center"
         android:layout_marginTop="28dp"
-        android:background="#BEBFBDBD"
-        android:hint=" Task title"
+        android:background="@drawable/rounded_corner"
+        android:gravity="center_vertical"
+        android:hint="    Task title"
         android:inputType="textAutoComplete"
-        android:textSize="20sp"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/currentDate"
@@ -40,13 +42,15 @@
     <EditText
         android:id="@+id/etDescription"
         android:layout_width="371dp"
-        android:layout_height="53dp"
+        android:layout_height="54dp"
         android:layout_gravity="center"
         android:layout_marginTop="28dp"
-        android:background="#BEBFBDBD"
-        android:hint=" Task description"
+        android:lines="3"
+        android:background="@drawable/rounded_corner"
+        android:gravity="center_vertical"
+        android:hint="    Task description"
         android:inputType="textAutoComplete"
-        android:textSize="20sp"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etNewTask"
@@ -55,12 +59,13 @@
     <TextView
         android:id="@+id/tvDate"
         android:layout_width="371dp"
-        android:layout_height="55dp"
+        android:layout_height="54dp"
         android:layout_gravity="center"
-        android:layout_marginTop="36dp"
-        android:background="#BEBFBDBD"
-        android:hint="   Pick the task date:"
-        android:textSize="20sp"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/rounded_corner"
+        android:gravity="center_vertical"
+        android:hint="    Pick the task date:"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etDescription"
@@ -68,8 +73,8 @@
 
     <ImageButton
         android:id="@+id/cal"
-        android:layout_width="35dp"
-        android:layout_height="40dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/ic_calendar"
         app:layout_constraintBottom_toTopOf="@+id/saveBtn"
@@ -77,7 +82,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etDescription"
-        app:layout_constraintVertical_bias="0.333"
+        app:layout_constraintVertical_bias="0.237"
         tools:ignore="MissingConstraints" />
 
     <Button
@@ -86,6 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         android:backgroundTint="#536DFE"
+        android:background="@drawable/rounded_corner"
         android:text="Add task"
         android:textColor="#000"
         app:layout_constraintBottom_toBottomOf="parent"
