--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -2,44 +2,45 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/bakk"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bakk"
     tools:context=".UpdateFragment">
 
     <TextView
         android:id="@+id/currentDate"
-        android:layout_width="0dp"
+        android:layout_width="371dp"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="33dp"
-        android:layout_marginEnd="20dp"
         android:layout_marginBottom="28dp"
-        android:background="#BEBFBDBD"
-        android:hint="Today's date is:"
+        android:background="@drawable/rounded_corner"
+        android:gravity="center_vertical"
+        android:hint="   Today's date is:"
         android:inputType="textAutoComplete"
-        android:textSize="20sp"
+        android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@+id/etNewTask"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/etNewTask"
-        android:editable="true"
-        android:enabled="true"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="39dp"
-        android:background="#BEBFBDBD"
-        android:hint=" Task title"
+        android:layout_marginBottom="34dp"
+        android:background="@drawable/rounded_corner"
+        android:editable="true"
+        android:enabled="true"
+        android:gravity="center_vertical"
+        android:hint="   Task title"
         android:inputType="textAutoComplete"
-        android:textSize="20sp"
+        android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@+id/etDescription"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,43 +54,48 @@
         android:layout_gravity="center"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="39dp"
-        android:background="#BEBFBDBD"
-        android:hint=" Task description"
+        android:layout_marginBottom="37dp"
+        android:background="@drawable/rounded_corner"
+        android:gravity="center_vertical"
+        android:hint="   Task description"
         android:inputType="textAutoComplete"
-        android:textSize="20sp"
+        android:lines="3"
+        android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@+id/cal1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etNewTask"
         tools:ignore="MissingConstraints" />
 
+
     <TextView
         android:id="@+id/tvDate"
         android:layout_width="0dp"
-        android:layout_height="55dp"
+        android:layout_height="54dp"
         android:layout_gravity="center"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="32dp"
-        android:background="#BEBFBDBD"
+        android:layout_marginTop="84dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="91dp"
+        android:background="@drawable/rounded_corner"
+        android:gravity="center_vertical"
         android:hint="   Pick the task date:"
-        android:textSize="20sp"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="@+id/editBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etDescription"
+        app:layout_constraintTop_toTopOf="@+id/etDescription"
         tools:ignore="MissingConstraints" />
-
 
     <ImageButton
         android:id="@+id/cal1"
-        android:layout_width="35dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="43dp"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/ic_calendar"
         app:layout_constraintBottom_toTopOf="@+id/editBtn"
-        app:layout_constraintStart_toEndOf="@+id/editBtn"
+        app:layout_constraintEnd_toEndOf="@+id/tvDate"
         app:layout_constraintTop_toBottomOf="@+id/etDescription"
         tools:ignore="MissingConstraints" />
 
@@ -97,13 +103,13 @@
         android:id="@+id/editBtn"
         android:layout_width="154dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="301dp"
+        android:layout_marginBottom="299dp"
+        android:background="@drawable/rounded_corner"
         android:backgroundTint="#536DFE"
         android:text="Confirm edit"
         android:textColor="#000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cal1" />
 
