--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -28,7 +28,7 @@
         tools:layout_editor_absoluteX="-4dp">
 
         <Button
-            android:id="@+id/finished"
+            android:id="@+id/filter"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="50dp"
