--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -8,124 +8,46 @@
     tools:context=".UpdateFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
+        android:id="@+id/rv"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        tools:listitem="@layout/recyclerview_item"
+        tools:listitem="@layout/filter_rv"
         android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <!--
-    <TextView
-        android:id="@+id/currentDate"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="33dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="28dp"
-        android:background="#f1f1f1"
-        android:hint="Today's date is:"
-        android:inputType="textAutoComplete"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/etNewTask"
+
+    <Button
+        android:id="@+id/back"
+        android:layout_width="154dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#536DFE"
+        android:background="@drawable/rounded_corner"
+        android:text="Back"
+        android:textColor="#000"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.954"
         tools:ignore="MissingConstraints" />
-
-    <EditText
-        android:id="@+id/etNewTask"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="39dp"
-        android:background="#f1f1f1"
-        android:hint=" Task title"
-        android:inputType="textAutoComplete"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/etDescription"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/currentDate"
-        tools:ignore="MissingConstraints" />
-
-    <EditText
-        android:id="@+id/etDescription"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="39dp"
-        android:background="#f1f1f1"
-        android:hint=" Task description"
-        android:inputType="textAutoComplete"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etNewTask"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/tvDate1"
-        android:layout_width="0dp"
-        android:layout_height="55dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="30dp"
-        android:hint="   Pick the task date:"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etDescription"
-        tools:ignore="MissingConstraints" />
-
 
     <ImageButton
-        android:id="@+id/cal0"
-        android:layout_width="35dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="43dp"
-        android:background="@drawable/ic_calendar"
-        app:layout_constraintTop_toBottomOf="@+id/etDescription"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="325dp" />
+        android:id="@+id/imgBack"
+        android:layout_width="38dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/ic_back"
+        android:elevation="3dp"
+        android:src="@drawable/ic_back"
+        app:layout_constraintEnd_toEndOf="@+id/back"
+        app:layout_constraintHorizontal_bias="0.189"
+        app:layout_constraintStart_toStartOf="@+id/back"
+        app:layout_constraintTop_toTopOf="@+id/back"
+        app:layout_editor_absoluteX="100dp"
+        app:layout_editor_absoluteY="200dp" />
 
-    <Button
-        android:id="@+id/editBtn0"
-        android:layout_width="154dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="301dp"
-        android:backgroundTint="#FDC783"
-        android:text="Confirm edit"
-        android:textColor="#000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.891"
-        app:layout_constraintStart_toStartOf="parent"
-       />
-
-    <Button
-        android:id="@+id/delBtn0"
-        android:layout_width="154dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="301dp"
-        android:backgroundTint="#FDC783"
-        android:text="Delete task"
-        android:textColor="#000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.124"
-        app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintVertical_bias="1.0" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
