--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="Red">#FF0000</color>
     <color name="Pink">#FFC4C4</color>
+    <color name="Blue">#2544F4</color>
 </resources>
