--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -7,42 +7,54 @@
     android:orientation="horizontal"
     tools:context=".InfoFragment">
 
+    <TextView
+        android:id="@+id/tvv7"
+        android:layout_width="309dp"
+        android:layout_height="44dp"
+        android:layout_centerInParent="true"
+        android:autoLink="web"
+        android:linksClickable="true"
+        android:text="@string/hi"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv1"
+        app:layout_constraintVertical_bias="0.844"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/tv2"
-        android:layout_width="343dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
+        android:layout_width="412dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="19dp"
         android:text="Marah.Bossi.jed.k1@tuwaiq.edu.sa"
         android:textAlignment="center"
         android:textColor="#FF5252"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="23sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.676" />
+        app:layout_constraintTop_toTopOf="@+id/tv1"
+        app:layout_constraintVertical_bias="0.69" />
 
     <TextView
         android:id="@+id/tv1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="243dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginTop="188dp"
         android:background="#7E536DFE"
         android:padding="18sp"
-        android:text="This application is made to manage your important tasks with the ability to add, modify and delete any task, for any suggestions please contact at: \n\n"
+        android:text="This application is made to manage your important tasks with the ability to add, modify and delete any task, for any suggestions please contact at: \n\n\n\n\n"
         android:textAlignment="center"
         android:textColor="#FFF"
         android:textSize="25sp"
         android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/tv2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
